k8s/smoke-test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
  namespace: hemera-smoke-test
spec:
  ingressClassName: traefik
  rules:
    - host: whoami.hemera.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami-loadbalancer
                port:
                  name: http
